fix: text selection behind blobs + body background color

--- a/src/styles/blocks/main-wrapper.css
+++ b/src/styles/blocks/main-wrapper.css
@@ -32,6 +32,7 @@
     top: -20%;
     opacity: 15%;
     z-index: 1;
+    pointer-events: none;
 }
 
 .main-wrapper::after {
@@ -45,4 +46,5 @@
     top: 10%;
     opacity: 10%;
     z-index: 1;
+    pointer-events: none;
 }
